--- a/package.json
+++ b/package.json
@@ -8,12 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.5.8",
+    "@apollo/react-hooks": "^4.0.0",
+    "@apollo/react-ssr": "^4.0.0",
+    "apollo-boost": "^0.4.9",
+    "graphql": "^16.3.0",
     "next": "12.0.9",
+    "next-apollo": "^5.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.2",
     "eslint": "8.7.0",
-    "eslint-config-next": "12.0.9"
+    "eslint-config-next": "12.0.9",
+    "postcss": "^8.4.5",
+    "tailwindcss": "^3.0.18"
   }
 }
