--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     "@apollo/client": "^3.5.8",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
+    "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
+    "@tailwindcss/typography": "^0.5.1",
     "apollo-boost": "^0.4.9",
     "graphql": "^16.3.0",
     "next": "12.0.9",
     "next-apollo": "^5.0.8",
+    "postcss-import": "^14.0.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-markdown": "^8.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
