--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-markdown": "^8.0.0"
+    "react-markdown": "^8.0.0",
+    "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.2",
