--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-lightgallery": "^0.9.0",
     "react-markdown": "^8.0.0",
+    "react-truncate-markup": "^5.1.0",
+    "react-truncate-text": "^1.0.1",
     "remark-unwrap-images": "^3.0.1"
   },
   "devDependencies": {
