--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "17.0.2",
     "react-lightgallery": "^0.9.0",
     "react-markdown": "^8.0.0",
+    "react-paginate": "^8.1.2",
     "react-truncate-markup": "^5.1.0",
     "react-truncate-text": "^1.0.1",
     "remark-unwrap-images": "^3.0.1"
