--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.3.0",
     "next": "12.0.9",
     "next-apollo": "^5.0.8",
+    "next-seo": "^5.4.0",
     "postcss-import": "^14.0.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
