--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "@apollo/client": "^3.5.8",
     "@apollo/react-hooks": "^4.0.0",
     "@apollo/react-ssr": "^4.0.0",
+    "@cloudinary/react": "^1.3.0",
+    "@cloudinary/url-gen": "^1.7.0",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/typography": "^0.5.1",
     "apollo-boost": "^0.4.9",
+    "cloudinary-build-url": "^0.2.4",
     "graphql": "^16.3.0",
     "next": "12.0.9",
     "next-apollo": "^5.0.8",
