--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@apollo/react-ssr": "^4.0.0",
     "@cloudinary/react": "^1.3.0",
     "@cloudinary/url-gen": "^1.7.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/nesting": "^0.0.0-insiders.565cd3e",
     "@tailwindcss/typography": "^0.5.1",
     "apollo-boost": "^0.4.9",
